--- a/index.html
+++ b/index.html
@@ -7,55 +7,103 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>   
+    <title>Document</title>
 </head>
 <body class="vh-100">
 
-  <div class="navbar navbar-light bg-light px-4">
-    <h2 id="title">Guess Card</h2>
-    <div class="d-flex gap-3">
-      <input id="bet" type="number" class="form-control" placeholder="BET">
-      <button id="play" class="btn-primary" >Play</button>
-    </div>
-    <h3 class="balance text-danger">Balans: </h3>
-  </div>
-
-  <div class="container-sm">
-    <div class="row">
-      <div class="col"></div>
-      <div class="col"></div>
-      <div class="col"></div>
+    <div class="navbar navbar-light bg-light px-4">
+        <h2 id="title">Guess number</h2>
+        <div class="d-flex gap-3">
+          <input id="bet" type="number" class="form-control" placeholder="Ставка">
+          <button id="play" class="btn btn-primary">Играть!</button>
+        </div>
+        <h3 class="balance text-danger">Balans: </h3>
     </div>
 
-    <div class="row">
-      <div class="col"></div>
-      <div class="col"></div>
-      <div class="col"></div>
+    <div class="container-sm mt-5 d-flex flex-column gap-4">
+      <div class="row">
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ratio-1x1">
+            <div class="card-body d-flex justify-content-center align-items-center">
+              <h1>1</h1>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <style>
+      .card {
+        height: 200px;
+        background-color: cornflowerblue;
+      }
+    </style>
+
+
+
+
+
     
-    <div class="row">
-      <div class="col"></div>
-      <div class="col"></div>
-      <div class="col"></div>
-    </div>
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
